# rust-best-price

./: Cargo.toml  README.md
public/: index.html
public/static/js/: appModel.js  bindingHandlers.js  chartModel.js  init.js  messageModel.js
src/: main.rs  settings.rs
src/backend/: error.rs  starter.rs
src/backend/handler/: empty.rs  mod.rs  price.rs  product.rs  util.rs
src/database/: database.rs  entity.rs  error.rs  mod.rs  schema.sql  sqlite.rs
src/worker/: config.rs  loader.rs  mod.rs  product.rs  starter.rs
