[package]
name = "best-price"
version = "0.1.2"
authors = ["Anton Shabanov <snakesolid@ngs.ru>"]

[dependencies]
argparse = "0.2"
env_logger = "0.4"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
iron = "0.5"
kuchiki = "0.6"
log = "0.3"
native-tls = "0.1"
serde = "1.0"
serde_derive = "1.0"
sqlite = "0.23"
tendril = "0.4"
time = "0.1"
tokio-core = "0.1"
toml = "0.4"
