[package]
name = "best-price"
version = "0.1.3"
authors = ["Anton Shabanov <snakesolid@ngs.ru>"]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 2
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"

[dependencies]
argparse = "0.2"
env_logger = "0.4"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
iron = "0.5"
kuchiki = "0.6"
log = "0.3"
mount = "0.3"
native-tls = "0.1"
router = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sqlite = "0.23"
staticfile = "0.4"
tendril = "0.4"
time = "0.1"
tokio-core = "0.1"
toml = "0.4"
urlencoded = "0.5"
